--- a/src/assets/Components/Carusel/Carousel.css
+++ b/src/assets/Components/Carusel/Carousel.css
@@ -10,54 +10,34 @@ main {
   padding: 2rem;
   font-family: Arial, sans-serif;
 
-  
   .carousel-container {
-    transform: translateX(0);
-    transition: transform 0.5s ease-in-out;
     box-shadow: 2px 2px 5px #0000004d;
     position: relative;
     width: 500px;
-    overflow: hidden;
     max-width: 600px;
-    margin: 0 auto;
   }
-  
-  /* .selected-drink   item in the carousel */
-  
+
   .selected-drink {
-    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     position: relative;
     background-color: #f9f9f9;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px #0000001a;
-    transform: translateY(0);
-    animation: slideIn 0.3s ease-in;
-    
-    @keyframes slideIn {
-      from {
-        transform: translateY(-500%);
-      }
-      to {
-        transform: translateY(0);
-      }
-    }
-  }
-  
-  img {
-    width: 460px;
-    height: 300px;
-    object-fit: cover;
+    transition: transform 0.5s ease, opacity 0.5s ease;
   }
 
-  .drink-name {
-    font-size: 1.5rem;
-    margin-top: 10px;
+  .selected-drink.active {
+    opacity: 1;
   }
-  
-  
+
+  .selected-drink:not(.active) {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+
   .recipe-dropdown {
     display: none;
     color: #fff;
@@ -68,23 +48,31 @@ main {
     left: 5%;
     bottom: 35%;
     right: 5%;
-    transform: translateY(-500%);
-    transition: 0.3s ease-in;
+    transform: translateY(-10%);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: opacity 0.5s ease, visibility 0.5s ease;
   }
-  
-  .recipe-dropdown.active {
+
+  .selected-drink.active .recipe-dropdown {
     display: block;
+    opacity: 1;
     transform: translateY(0);
-    animation: slideIn 0.3s ease-in;
-    
-    @keyframes slideIn {
-      from {
-        transform: translateY(-500%);
-      }
-      to {
-        transform: translateY(0);
-      }
-    }
+  }
+
+  img {
+    width: 460px;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .drink-name {
+    font-size: 1.5rem;
+    margin-top: 10px;
+  }
+
+  .selected-drink.active .recipe-dropdown {
+    display: block;
+    opacity: 1;
   }
 }
 
@@ -93,7 +81,9 @@ h1 {
   text-transform: uppercase;
   font-size: 2rem;
 }
+
 /* Previous and next buttons styles */
+
 .prev,
 .next {
   background-color: transparent;
