--- a/src/Components/Carusel/Carousel.css
+++ b/src/Components/Carusel/Carousel.css
@@ -1,24 +1,17 @@
-@keyframes walkIn {
+/* Main container styles */
+
+@keyframes switchDrink {
   0% {
-    transform: translateX(100%);
+    opacity: 0;
+    transform: translateX(50px);
   }
   50% {
-    transform: translateX(0) rotateY(0deg);
-  }
-  60% {
-    transform: translateX(0) rotateY(-10deg);
-  }
-  70% {
-    transform: translateX(0) rotateY(10deg);
-  }
-  80% {
-    transform: translateX(0) rotateY(-10deg);
-  }
-  90% {
-    transform: translateX(0) rotateY(10deg);
+    opacity: 1;
+    transform: translateX(0);
   }
   100% {
-    transform: translateX(0) rotateY(0deg);
+    opacity: 0;
+    transform: translateX(-50px);
   }
 }
 
@@ -34,15 +27,10 @@
   align-items: center;
   position: relative;
   background-color: #f9f9f9;
-  padding: 5px 0;
+  padding: 5px  0;
   width: 100%;
   overflow: hidden;
-  animation-name: walkIn;
-  animation-duration: 5s;
-  animation-timing-function: linear;
-  /* animation-delay: 2s; */
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+  animation: switchDrink 5s infinite;
 }
 
 .recipe-dropdown {
@@ -58,12 +46,6 @@
   transform: translateY(-10%);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: opacity 0.5s ease, visibility 0.5s ease;
-}
-
-.selected-drink.active .recipe-dropdown {
-  display: block;
-  opacity: 1;
-  transform: translateY(0);
 }
 
 img {
