--- a/src/Components/Carusel/Carousel.css
+++ b/src/Components/Carusel/Carousel.css
@@ -18,7 +18,6 @@
 .carousel-container {
   position: relative;
   width: 100vw;
-  background-color: #007bff;
 }
 
 .selected-drink {
@@ -91,7 +90,7 @@ h1 {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 10px;
+  margin: 0 auto;
 }
 .prev {
   left: 0;
