--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1rem solid black;
+  background-color: #fff;
 }
