--- a/src/Components/Carusel/Carousel.css
+++ b/src/Components/Carusel/Carousel.css
@@ -1,49 +1,53 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
   position: relative;
   width: 100%;
   height: fit-content;
-
-  margin: auto;
-
   overflow: hidden;
-  background-color: #fff;
-}
-
-.drink-carousel {
-  position: relative;
-  width: 100vw;
-  height: 70vh;
-  overflow: hidden;
+  background-color: #9e2525;
 
   h1 {
-    text-align: center;
     text-transform: uppercase;
     font-size: 3rem;
     color: #0e0e0f;
     padding: 10px 0;
   }
+}
 
-  img {
+.wrapper {
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
+  background-color: aqua;
+
+  .slider {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+    padding: 3rem 0;
     width: 100%;
-    height: 80%;
-    object-fit: fill;
+    height: 60vh;
+  }
+
+  .str-name{
+    font-size: 3rem;
   }
 }
 
-.recipe-details {
+.drink-details {
   color: #fff;
   background-color: #0e0e0f;
   opacity: 0.5;
   padding: 2rem;
-  position: absolute;
   left: 5%;
-  bottom: 35%;
+  bottom: 45%;
   right: 5%;
   transform: translateY(-10%);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* transition: opacity 0.5s ease, visibility 0.5s ease; */
 }
 
 /* Previous and next buttons styles  */
