--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
 body {
-  margin: 0;;
+  background-color: #f9f9f9;
+  padding: 2rem 4rem;
+  margin: 0 auto;
+  width: 90vw;
   min-width: 320px;
   min-height: 100vh;
 }
-/* 
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -54,4 +66,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
